--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/filament": "^3.2",
         "filament/tables": "^3.2",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5"
     },
