--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "filament/tables": "^3.2",
+        "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.9",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
